<resources>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="app_name">Surakshaमित्र</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="please_login_to_your_account">PLEASE LOGIN TO YOUR ACCOUNT</string>
    <string name="login2">LOGIN</string>
    <string name="password3">Password</string>
    <string name="email">Email</string>
    <string name="register_here">Register Here</string>
    <string name="login">Login</string>
    <string name="email4">Email</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login5">Login</string>
    <string name="please_register_your_account_here">Please Register Your Account Here</string>
    <string name="name">Name</string>
    <string name="register_here1">REGISTER HERE</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="reset_your_password">RESET YOUR PASSWORD</string>
    <string name="email6">Email</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="or_use_another_method">Or use Another Method</string>
    <string name="back">BACK</string>
    <string name="login_with_mobile_number">LOGIN WITH MOBILE NUMBER</string>
    <string name="login_with_email">LOGIN WITH EMAIl ADDRESS</string>
    <string name="contacts">CONTACTS</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="please_confirm_your_country_code_and_enter_your_phone_number">Please Confirm Your country code and enter your phone Number.</string>
    <string name="please_confirm_country_code_and_enter_your_phone_number">Please Confirm Your Country code and enter your phone number</string>
    <string name="your_phone_number1">Your Phone Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="country">Country</string>
    <string name="continue1">CONTINUE</string>
    <string name="add_contacts">Add Contacts</string>
    <string name="logout">Logout</string>
    <string name="how_to_use">How to use</string>
    <string name="helpline_numbers">Helpline Numbers</string>
    <string name="fake_siren">Fake Siren</string>
    <string name="emergency">Emergency</string>
    <string name="enter_contact_name">Enter Contact Name</string>
    <string name="add">ADD</string>
    <string name="contactsNumber">contacts</string>
    <string name="enter_contact_number">Enter Contact Number</string>
    <string name="home">HOME</string>
    <string name="camera">CAMERA</string>
    <string name="message">MESSAGE</string>
    <string name="profile">PROFILE</string>
    <string name="my_friend">My Friend</string>
    <string name="_9999999999">9999999999</string>
    <string name="my_friendnew">My Friend</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="delete">DELETE</string>
    <string name="edit">EDIT</string>
    <string name="name1">NAME</string>
    <string name="contact_number1">Contact Number</string>
    <string name="contact_number3">Contact Number</string>
    <string name="contacts1">Contacts</string>
    <string name="add8">ADD</string>
    <string name="contact_number8">Contact Number</string>
    <string name="contact_name6">Contact Name</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_your_phone">Enter your phone</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="get_otp1">Get OTP</string>
    <string name="press_the_button_below_to_stop_the_siren">Press the button below to stop the siren.</string>
    <string name="press_the_button_below_to_play_the_siren">Press the button below to play the siren.</string>
    <string name="emergency2">EMERGENCY</string>
    <string name="this_will_send_sms_to_your_registered_contacts_with_your_current_location">This will send sms to your registered contacts with your current location.</string>
    <string name="press_the_button_below_to_play_the_siren3">Press the button below to play the siren.</string>
    <string name="press_the_button_below_to_stop_the_siren6">Press the button below to stop the siren.</string>
    <string name="user_profile">USER PROFILE</string>
    <string name="contact_number_new">Contact Number</string>
    <string name="contact_name_new">Contact Name</string>
    <string name="suraksha">SURAKSHAमित्र</string>
    <string name="about">ABOUT</string>
    <string name="share">SHARE</string>
    <string name="settings">SETTINGS</string>
    <string name="home2">HOME</string>
    <string name="applogo">applogo</string>
    <string name="home3">HOME</string>
    <string name="alert">ALERT</string>
    <string name="chat">CHAT</string>
    <string name="safety_tips">SAFETY TIPS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_message">Enter Message</string>
    <string name="sending_message">SENDING MESSAGE</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="send_sms">SEND SMS</string>
    <string name="save_sms">SAVE SMS</string>
    <string name="enter_mobile_number1">Enter Mobile Number</string>
    <string name="are_you_in_emergency">Are You In Emergency</string>
    <string name="press_the_below_button_and_help_will_reach_you_shortly">Press The Below Button And Help Will reach You Shortly</string>
    <string name="sos">SOS</string>
    <string name="my_map_api_key">AIzaSyDu5AUPz8pz55dDCqaGKxy4xHQymZbnK3w</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="send">SEND</string>
    <string name="send_location">Send Location</string>
    <string name="hint">hint</string>
    <string name="enter_number">Enter Number</string>
    <string name="send1">SEND</string>
    <string name="surakshaa">Surakshaमित्र</string>
    <string name="abc">abc</string>
    <string name="button">button</string>
    <string name="microphone">microphone</string>
    <string name="floatingaction_button">floatingaction button</string>
    <string name="enter_name">Enter Name</string>
    <string name="add_contact">Add Contact</string>
    <string name="user">user</string>
    <string name="contact">contact</string>
    <string name="number">number</string>
    <string name="update_contact">UPDATE CONTACT</string>
    <string name="update">UPDATE</string>
    <string name="press_above_button_to_send_notification">Press Above Button to send Notification</string>
    <string name="emergency_help_needed">Emergency Help Needed</string>
    <string name="enter_message1">Enter Message</string>
    <string name="alert_message">ALERT MESSAGE</string>
    <string name="write_message">Write Message</string>
    <string name="save">SAVE</string>
    <string name="view">VIEW</string>
    <string name="active_emergency">Active Emergency</string>
    <string name="call_108_for_medical_emergency">Call 108 for medical emergency</string>
    <string name="call_112_for_police_assistance">Call 112 for Police Assistance</string>
    <string name="call_1091">Call 1091</string>
    <string name="call_1098_for_child_helpline">Call 1098 For Child Helpline</string>
    <string name="nearby_explore">Nearby Explore</string>
    <string name="police_stations">Police Stations</string>
    <string name="hospitals">Hospitals</string>
    <string name="bus_stop">Bus Stop</string>
    <string name="enter_message12">Enter Message</string>
    <string name="send_location4">Send Location</string>
    <string name="search">Search......</string>
    <string name="_1_0_8">1-0-8</string>
    <string name="call_112_for_police_help">Call 112 for Police Help</string>
    <string name="_112">112</string>
    <string name="write_here">Write here....</string>
    <string name="contact_nameuser">Contact Name</string>
    <string name="contact_info">Contact Info</string>
    <string name="get_current_location">GET CURRENT LOCATION</string>
    <string name="send_current_location">SEND CURRENT LOCATION</string>
    <string name="logout1">logout</string>
    <string name="settings1">settings</string>
    <string name="profile3">profile</string>
    <string name="confirm_logout">Confirm Logout</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="cancel">CANCEL</string>
    <string name="logout12">LOGOUT</string>
    <string name="send_otp">SEND OTP</string>
    <string name="use_mobile_number">Use Mobile Number</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="next">NEXT</string>
    <string name="otp_verification">Otp Verification</string>
    <string name="enter_mobile_number_for_registration">Enter mobile number for registration</string>
    <string name="get_otp_user">GET OTP</string>
    <string name="app_permissions">App Permissions</string>
    <string name="enter_otp_send_to_your">Enter OTP send to your</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_otp1">Enter OTP</string>
    <string name="get_otp2">Get OTP</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="choose_what_you_want_to_learn_today">Choose what you want to learn today!</string>
    <string name="phone_number_user">Phone Number</string>
    <string name="get_otp3">GET OTP</string>
    <string name="otp">OTP</string>
    <string name="verify_otp6">Verify OTP</string>
</resources>