<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="#E6E6FA">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login2"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="24sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_login_to_your_account"
        android:gravity="center"
        android:textStyle="bold"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="10dp"
        android:elevation="40dp"
        app:cardCornerRadius="15dp"
        android:background="#ffffff"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:placeholderText="ex:abc68@gmail.com"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:drawableStart="@drawable/baseline_email_24"
                    android:drawablePadding="10dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="15dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                app:boxCornerRadiusBottomStart="5dp"

                app:boxCornerRadiusTopEnd="5dp"
                app:counterEnabled="true"
                app:counterMaxLength="6"
                app:passwordToggleEnabled="true">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:drawableStart="@drawable/baseline_lock_24"
                    android:drawablePadding="5dp"
                    android:hint="@string/password3"
                    android:inputType="textPassword"
                    android:padding="17dp"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="5dp"
                android:text="@string/forgot_password"
                android:textAlignment="textEnd"
                android:textColor="#0000FF" />


            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48sdp"
                android:layout_margin="5dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="#673AB7"
                android:text="@string/login" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:gravity="center"
        android:text="@string/don_t_have_an_account"
        android:textColor="?attr/colorPrimary" />
    <TextView
        android:id="@+id/registerIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_here"
        android:padding="5dp"
        android:textColor="#0000FF"/>


</LinearLayout>
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar1"
        android:layout_gravity="center"
        android:visibility="gone"/>

</LinearLayout>