<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetActivity"
    android:orientation="vertical"
    >


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/forgot1"
        android:id="@+id/forgotIcon"
       />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_your_password"

        android:gravity="center"
        android:textSize="18sp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/resetEmail"
            android:hint="@string/email6"
            android:layout_marginTop="15dp"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:visibility="gone"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:id="@+id/resetBtn"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/reset_password"
        app:icon="@drawable/baseline_lock_reset_24"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:id="@+id/backBtn"
        android:layout_gravity="center"
        android:text="@string/back"
        app:icon="@drawable/baseline_arrow_back_24"
        />

</LinearLayout>