<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".mobileOtp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:prefixText="+91"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/idEdtPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/phone_number_user"
                android:inputType="phone"
                android:maxLength="10"
                android:padding="10dp" />


        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/idBtnGetOtp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/lavender"
        android:text="@string/get_otp3" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/idEdtOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/otp"
            android:inputType="phone"
            android:maxLength="6"

            android:padding="10dp" />
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/idBtnVerify"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="right"
        android:backgroundTint="@color/lavender"
        android:text="@string/verify_otp6"
        android:layout_marginTop="10dp"
        />


</LinearLayout>