<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="400dp"
        android:elevation="10dp"
        android:layout_height="wrap_content"
        android:id="@+id/messageBar"

        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:id="@+id/messageLayout"
            android:orientation="vertical"
            android:background="@color/lavender"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alert_message"
                android:gravity="center"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:layout_marginBottom="10dp"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/chatLayout"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#fff"
                android:layout_marginEnd="30dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/write_message"
                    android:id="@+id/chatTxt"
                    android:lines="5"
                    android:inputType="textMultiLine"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginTop="10dp"
                android:layout_below="@+id/chatLayout"
                android:layout_marginStart="70dp"
                android:id="@+id/saveMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/viewMessage"
                android:text="@string/view"
                android:layout_below="@+id/chatLayout"
                android:layout_toEndOf="@+id/saveMessage"
                android:layout_marginStart="80dp"/>



        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>