<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:background="#E6E6FA"
        android:id="@+id/constraintLayout"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:layout_alignParentTop="true"
        app:layout_constraintBottom_toTopOf="@+id/container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lavender"
            app:title="@string/app_name"


            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">



                <TextView
                    android:id="@+id/appName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:backgroundTint="#FFFFFF"
                    android:text="@string/suraksha"
                    android:textColor="#121111"
                    android:textSize="24sp" />
                <ImageView
                    android:id="@+id/camera"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/camera"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/camera"/>


            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/container"

        android:layout_below="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/navBar"
         />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@drawable/shape1"
        android:foregroundGravity="center"
        app:itemBackground="@color/lavender"
        android:layout_alignParentBottom="true"

        app:menu="@menu/menu_bar"
        android:elevation="20dp"

        />


</RelativeLayout>





